--- a/rmd-paper.Rmd
+++ b/rmd-paper.Rmd
@@ -3,27 +3,70 @@ title: "Example paper from R Markdown"
 author:
 - name: Author 1
   affiliation: University of Whatever
-  email: author1@example.edu
+  email: author1@example.ac.uk
 - name: Author 2
   affiliation: University of Wherever
-  email: author2@example2.edu
-date: January 3, 2020
+  email: author2@example2.ac.uk
+date: `r format(Sys.time(), '%d %B, %Y')`
 published: Working paper.
+titlepage: true
 git-repo: https://example.com
 abstract: >-
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
 reference-section-title: References
 mainfont: Spectral
 sansfont: Open Sans
+thanks: >-
+    We thank x, y and $z$
+keywords: k1; k2; k3
+thanks: >-
+  I thank $x$, $y$. Financial support from $z$ is greatly acknowledged.
+correspondence: >-
+  Correspondence concerning this article should be addressed to corresponding author. Contact: <author1@example.ac.uk>.
 ---
 
 <!-- rmd-paper.md is generated from rmd-paper.Rmd. Only edit the .Rmd file, *not* the .md file. -->
+
+```{r setup, include=FALSE}
+library(knitr)
+knitr::opts_chunk$set(
+                      fig.path='figs-tbls',
+                      cache.path='cache/',
+                      dev=c("ragg_png","cairo_pdf"),
+                      cache=TRUE,
+                      par=TRUE,
+                      echo=FALSE,
+                      warning = FALSE,
+                      results="asis",
+                      message=FALSE)
+knit_hooks$set(par = function(before, options, envir){
+    if (before && options$fig.show != 'none') par(mar = c(4,4,.1,.1), cex.lab = .95, cex.axis = .9, mgp = c(2, .7, 0), tcl = -.3)
+}, crop=hook_pdfcrop)
+opts_knit$set(kfigr.prefix=TRUE,
+              kfigr.link=FALSE)
+
+# call in functions from `/scripts/`
+source("scripts/001-HelperFunctions.R", local = knitr::knit_global())
+# or sys.source("scripts/001-HelperFunctions.R", envir = knitr::knit_global())
+```
+
+```{r libraries}
+library(tidyverse)
+library(here)
+library(janitor)
+library(socviz)
+library(ggrepel)
+library(showtext)
+library(tibble)
+library(magrittr)
+library(pander)
+```
 
 # Introduction
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua [@HeissKelley:2017]. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat [@KeckSikkink:1998]. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur [@Heiss:2019].
 
-```{r build-save-plot, echo=FALSE}
+```{r build-save-plot, echo=FALSE, warning=FALSE}
 # Technically, knitr can put graphic output directly in a document---that's like
 # the number one thing knitr is famous for! For my workflow, though, I like
 # creating all my images in other files, like an anlysis notebook, and then
@@ -70,10 +113,6 @@ Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, ad
 In @tbl:mytable, quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?
 
 ```{r example-table, echo=FALSE, warning=FALSE, message=FALSE}
-library(tibble)
-library(magrittr)
-library(pander)
-
 # Unlike graphics, this can be done directly from R without needing to save an
 # intermediate file if you want: set results="asis" in the chunk options,
 # comment out pandoc.table.return() and cat(), and uncomment pandoc.table()
@@ -90,10 +129,10 @@ tribble(
 
 !include figs-tbls/mytable.md
 
-At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. 
+At vero eos et^[This is a footnote with an in-text reference @HeissKelley:2017.] accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. 
 
 ## Subsection again
 
-Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est^[This is a footnote.], omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
 
-!include external.md
+!include 'sections/conclusion.md'
