title-page typo

--- a/rmd-paper.Rmd
+++ b/rmd-paper.Rmd
@@ -9,7 +9,8 @@ author:
   email: author2@example2.ac.uk
 date: `r format(Sys.time(), '%d %B, %Y')`
 published: Working paper.
-titlepage: true
+title-page: true
+code-repo: "Access the code at <https://github.com/ygalanak/DataAnalysisTemplate>"
 git-repo: https://github.com/ygalanak/DataAnalysisTemplate
 abstract: >-
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
