smaller font for fig note and caption

--- a/rmd-paper.Rmd
+++ b/rmd-paper.Rmd
@@ -93,7 +93,10 @@ library(ggplot2)
 plot1 <- ggplot(mpg, aes(x = cty, y = hwy, color = as.factor(cyl))) +
   geom_point(size = 0.5, position = position_jitter()) +
   labs(x = "City MPG", y = "Highway MPG", color = "Cylinders") +
-  theme_minimal(9)
+  theme_minimal(9)+
+  theme(axis.title.x = element_text(size = 8),
+        axis.title.y = element_text(size = 8, face = "plain"),
+        legend.title=element_text(size=8))
 
 plot1 <-arrangeGrob(plot1, nrow=1,
              bottom = ggpubr::text_grob("Note: this plot really shows the same information, and is really very very very very long. \nSource: Own elaboration based on data",
@@ -106,8 +109,8 @@ plot1 <-arrangeGrob(plot1, nrow=1,
 
 ggsave(here::here("figs-tbls", "mpg-plot.pdf"), plot = plot1,
        width = 5, height = 3, units = "in", device = cairo_pdf)
-#ggsave(here::here("figs-tbls", "mpg-plot.png"), plot = plot1,
-#       width = 5, height = 3, units = "in", type = "cairo", dpi = 300)
+ggsave(here::here("figs-tbls", "mpg-plot.png"), plot = plot1,
+       width = 5, height = 3, units = "in", type = "cairo", dpi = 300)
 ```
 
 ![Scatterplot showing the relationship between city and highway miles per gallon](figs-tbls/mpg-plot.pdf){#fig:mpg-plot}
