--- a/rmd-paper.tex
+++ b/rmd-paper.tex
@@ -449,7 +449,7 @@
 \pagestyle{athgit}
 
 % Otherwise, use the normal article title + abstract + epigraph
-\published{\textbf{09 February, 2022} \qquad Working
+\published{\textbf{15 February, 2022} \qquad Working
 paper. \\ {\tiny Access the code at
 \url{https://github.com/ygalanak/DataAnalysisTemplate}}}
 
@@ -498,7 +498,7 @@ Figure~\ref{fig:mpg-plot}), eaque ipsa quae ab illo inventore veritatis
 et quasi architecto beatae vitae dicta sunt explicabo.
 
 \[ 
-\text{This is a test} = \beta_1 x_1 + \epsilon 
+\text{This is a test} = \beta_1 x_1 + \varepsilon 
 \]
 
 Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
@@ -596,6 +596,8 @@ corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
 Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse
 quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo
 voluptas nulla pariatur?
+
+\newpage
 
 \printbibliography[heading=subbibliography, title=References]
 
